# letterboxd-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.beta.yml  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: docker-beta.yml  docker-release.yml
src/letterboxd_discord_bot/: database.py  main.py
src/letterboxd_discord_bot/cogs/: letterboxd_cog.py  tasks_cog.py
src/letterboxd_discord_bot/utils/: db_actions.py  embeds.py  letterboxd_actions.py  misc.py
